# jpeg

./: .gitignore  CMakeLists.txt  build.sh  clean.sh  run.sh
imgjpeg/: CMakeLists.txt
imgjpeg/include/: misc.h  threads.h
imgjpeg/include/jpeg/: calculate.h  decoder.h  encoder.h  image.h  parser.h  tables.h
imgjpeg/src/: file.c
imgjpeg/src/jpeg/: calculate.c  decoder.c  encoder.c  parser.c  tables.c
include/: file.h  format.h  huffman.h  markers.h  mem.h  misc.h  parser.h
include/jpeg/: calculate.h  decoder.h  format.h  huffman.h  parser.h  tables.h
src/: file.c  huffman.c  main.cpp  mem.c  parser.c  threads.c
src/jpeg/: calculate.c  decoder.c  huffman.c  image.c  parser.c  tables.c
